# bhr

./: .gitignore  Pipfile  pyproject.toml  requirements.txt
bhr/: db.sqlite3  manage.py
bhr/FAQ/: models.py  urls.py  views.py
bhr/FAQ/migrations/: 0001_initial.py
bhr/FAQ/templates/: faq.html
bhr/bhr/: asgi.py  settings.py  urls.py  wsgi.py
bhr/discounts/: admin.py  models.py  urls.py  views.py
bhr/discounts/migrations/: 0001_initial.py  0002_alter_point_create_date_alter_point_expire_date_and_more.py  0002_alter_voucher_expire_date.py  0003_rename_username_point_user.py  0004_alter_point_expire_date_alter_voucher_expire_date.py  0005_alter_point_expire_date_alter_voucher_expire_date.py  0006_voucher_is_used.py  0007_voucher_user.py
bhr/discounts/templates/: discounts.html  moneyback.html  new_voucher.html  voucher_admin.html  vouchers.html
bhr/projects/: admin.py  forms.py  models.py  urls.py  views.py
bhr/projects/migrations/: 0001_initial.py  0002_project_demo.py  0003_project_chat.py  0004_rename_id_project_project_id.py  0005_certificates.py  0006_rename_certificates_certificate.py  0007_projectimage_show_alter_projectimage_image.py  0008_remove_projectimage_show_project_show.py
bhr/projects/templates/: certificates.html  image_preview_modal.html  projects.html
bhr/users/: admin.py  forms.py  models.py  urls.py  views.py
bhr/users/migrations/: 0001_initial.py  0002_delete_ipaddress.py
bhr/users/templates/: 403.html  404.html  base.html  home.html
bhr/users/templates/registration/: base_registration.html  login.html  password_reset_done.html  (+6 more)
(+17 files in other folders)
